--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "debug": "~2.6.9",
     "express": "~4.16.0",
     "hbs": "~4.0.1",
-    "http-errors": "~1.6.2",
-    "morgan": "~1.9.0"
+    "http-errors": "^1.6.3",
+    "morgan": "~1.9.0",
+    "socket.io": "^2.2.0"
   }
 }
