--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "hbs": "~4.0.1",
     "http-errors": "^1.6.3",
     "morgan": "~1.9.0",
+    "puppeteer": "^1.16.0",
     "socket.io": "^2.2.0"
   }
 }
